# readabs

./: LICENSE  README.md  pyproject.toml
readabs/: __init__.py  abs_query.py  connection.py  dataflow.py  main.py
tests/: test_abs_query.py  test_connection.py  test_dataflow.py  test_main_return.py
tests/res/: sample_timeseries_dict.xml
