[tool.poetry]
name = "readabs"
version = "0.1.0"
description = "Clone of R package."
authors = ["landseal <kenndesilva1@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.32.3"
openpyxl = "^3.1.5"


[tool.poetry.group.test.dependencies]
pytest = "^8.3.4"
pytest-mock = "^3.14.0"
xmltodict = "^0.14.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
