[project]
name = "readabs"
version = "0.1.0"
description = "Clone of R package."
authors = [{ name = "landseal", email = "<kenndesilva1@gmail.com>"}]
license = "MIT"
readme = "README.md"

[tool.pyright]
venvPath = "."
venv = ".venv"

[tool.poetry.dependencies]
python = "^3.12"
openpyxl = "^3.1.5"
aiohttp = "^3.11.14"
asyncio = "^3.4.3"
nest-asyncio = "^1.6.0"
pandas = "^2.2.3"

[tool.poetry.group.test.dependencies]
pytest = "^8.3.4"
pytest-mock = "^3.14.0"
xmltodict = "^0.14.2"
pytest-xdist = "^3.6.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
