[project]
name = "readabs"
version = "0.1.0"
description = "Clone of R package."
authors = [{ name = "landseal", email = "<kenndesilva1@gmail.com>" }]
requires-python = "~=3.12"
readme = "README.md"
license = "MIT"
dependencies = [
    "openpyxl>=3.1.5,<4",
    "aiohttp>=3.11.14,<4",
    "asyncio>=3.4.3,<4",
    "nest-asyncio>=1.6.0,<2",
    "pandas>=2.2.3,<3",
]

[dependency-groups]
test = [
    "pytest>=8.3.4,<9",
    "pytest-mock>=3.14.0,<4",
    "xmltodict>=0.14.2,<0.15",
    "pytest-xdist>=3.6.1,<4",
]

[tool.pyright]
venvPath = "."
venv = ".venv"

[tool.uv]
default-groups = ["test"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
